front view and Neo connection improved

--- a/app/views/hone/_form.html.erb
+++ b/app/views/hone/_form.html.erb
@@ -14,8 +14,9 @@
 		  </div>
 	  </tr>
 	  <tr>
-		<td><%=  radio_button_tag :search_type, 'location', checked = true %>&nbspLocation Based&nbsp</td>
-		<td><%=  radio_button_tag :search_type, 'activity' %>&nbspActivity Based&nbsp</td>
+		<td></td>
+		<td align = "center"><%=  radio_button_tag :search_type, 'location', checked = true %>&nbspLocation Based&nbsp</td>
+		<td align = "center"><%=  radio_button_tag :search_type, 'activity' %>&nbspActivity Based&nbsp</td>
 	  </tr>
 	  <tr>
 		<td align = "center"><%= label_tag :"Select Activity :" %></td>
